<resources>
    <string name="app_name">My Application</string>
    <string name="preference_page_name">Préférences</string>
    <string name="jouer" translatable="true">Jouer</string>
    <string name="jeu_du_pendu">Jeu du pendu!</string>
    <string name="historique">Historique</string>
    <string name="choix_language">Choisissez votre langue:</string>
    <string name="dictionnaire">Dictionnaire</string>
    <string name="anglais">Anglais</string>
    <string name="francais">Français</string>
    <string name="lettre_a" translatable="false">A</string>
    <string name="lettre_b" translatable="false">B</string>
    <string name="lettre_c" translatable="false">C</string>
    <string name="lettre_d" translatable="false">D</string>
    <string name="lettre_e" translatable="false">E</string>
    <string name="lettre_f" translatable="false">F</string>
    <string name="lettre_g" translatable="false">G</string>
    <string name="lettre_h" translatable="false">H</string>
    <string name="lettre_i" translatable="false">I</string>
    <string name="lettre_j" translatable="false">J</string>
    <string name="lettre_k" translatable="false">K</string>
    <string name="lettre_l" translatable="false">L</string>
    <string name="lettre_m" translatable="false">M</string>
    <string name="lettre_n" translatable="false">N</string>
    <string name="lettre_o" translatable="false">O</string>
    <string name="lettre_p" translatable="false">P</string>
    <string name="lettre_q" translatable="false">Q</string>
    <string name="lettre_r" translatable="false">R</string>
    <string name="lettre_s" translatable="false">S</string>
    <string name="lettre_t" translatable="false">T</string>
    <string name="lettre_u" translatable="false">U</string>
    <string name="lettre_v" translatable="false">V</string>
    <string name="lettre_w" translatable="false">W</string>
    <string name="lettre_x" translatable="false">X</string>
    <string name="lettre_y" translatable="false">Y</string>
    <string name="lettre_z" translatable="false">Z</string>
    <string name="choix_languageFr">Français</string>
    <string name="choix_languageEn">Anglais</string>
    <string name="choix_niveau_difficulté">Choisissez votre difficulté:</string>
    <string name="choix_niveau_difficulté_facile">Facile</string>
    <string name="choix_niveau_difficulté_normal">Normal</string>
    <string name="choix_niveau_difficulté_difficile">Difficile</string>
    <string name="page_preference_bouton_accueil">Page d\'accueil</string>

    <string name="recommencer">Recommencer</string>
    <string name="message_game_over">Vous avez perdu \n mot: %1$s</string>
    <string name="menu">Menu</string>
    <string name="facile">Facile</string>
    <string name="normal">Normal</string>
    <string name="difficile">Difficile</string>
    <string name="easy">Facile</string>
    <string name="hard">Difficile</string>
    <string name="Retirer">Retirer</string>
    <string name="title_activity_dictionnaire" translatable="false">DictionnaireActivity</string>
    <string name="nouveau_mot">Nouveau mot</string>
    <string name="mot_francais">Mot français :</string>
    <string name="mot_anglais">Mot anglais :</string>
    <string name="une_difficulte">Difficulté</string>
    <string name="Ajouter">Ajouter</string>
    <string name="reussi">Réussi ?</string>
    <string name="mot">Mot :</string>
    <string name="difficultePartie">Difficulté :</string>
    <string name="temp">Temps :</string>
    <string name="mot_ajoute">Mot ajouté avec succès</string>
    <string name="champ_vide">Tout les champs doivent être remplie</string>
    <string name="message_gagne">Vous avez gagné !</string>
    <string name="veuillez_entrer_le_mot_francais">Veuillez entrer le mot francais!</string>
    <string name="veuillez_entrer_le_mot_anglais">Veuillez entrer le mot anglais!</string>
    <string name="confirmer_la_suppression">confirmer la suppression</string>
    <string name="etes_vous_sure">Êtes vous sure?</string>
    <string name="mot_supprime">Mot supprimé avec succès!</string>
    <string name="annuler">annuler</string>
    <string name="confirmer">confirmer</string>
    <string name="vider_historique">Vider l\'historique 🗑️</string>


</resources>