<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="294dp"
        android:layout_height="81dp"
        android:layout_marginTop="80dp"
        android:background="@android:drawable/editbox_background"
        android:fontFamily="@font/abril_fatface"
        android:outlineProvider="none"
        android:text="@string/jeu_du_pendu"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnJeu"
        android:layout_width="156dp"
        android:layout_height="41dp"
        android:layout_marginBottom="390dp"
        android:backgroundTint="#333131"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/jouer"
        android:textColorHighlight="#673AB7"
        app:cornerRadius="@dimen/cardview_compat_inset_shadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnHistorique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="#333131"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/historique"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnPreference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="#333131"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/preference_page_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>