<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/spinner"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="294dp"
        android:layout_height="81dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_background"
        android:fontFamily="@font/caveat"
        android:outlineProvider="none"
        android:text="@string/dictionnaire"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.04000002">

        <RadioButton
            android:id="@+id/boutonAnglais"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/caveat"
            android:text="@string/anglais"
            android:textSize="34sp" />

        <RadioButton
            android:id="@+id/boutonFrancais"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/caveat"
            android:text="@string/francais"
            android:textSize="34sp" />
    </RadioGroup>

    <Spinner
        style="@style/SpinnerItemFont"
        android:layout_width="162dp"
        android:layout_height="60dp"
        android:layout_marginTop="19dp"
        android:entries="@array/mode"
        android:spinnerDropDownItemStyle="@style/SpinnerItemFont"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>