<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:background="@drawable/btn_background"
    android:baselineAligned="false"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="247dp"
        android:layout_height="176dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/caveat"
                android:text="@string/mot"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/motPartie"
                android:layout_width="158dp"
                android:layout_height="73dp"
                android:fontFamily="@font/caveat"
                android:text="TextView"
                android:textAllCaps="true"
                android:textSize="34sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:fontFamily="@font/caveat"
            android:text="@string/difficultePartie"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/difficultePartie"
            android:layout_width="206dp"
            android:layout_height="54dp"
            android:fontFamily="@font/caveat"
            android:text="TextView"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="167dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:fontFamily="@font/caveat"
                android:text="@string/temp"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/tempPartie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:fontFamily="@font/caveat"
                android:text="TextView"
                android:textColor="#3AAEE4"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ReussiTextView"
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/caveat"
                android:text="@string/reussi"
                android:textSize="34sp" />

            <ImageView
                android:id="@+id/reussitePartieImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>